manifests/mesh/creditservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: creditservice
spec:
  hosts:
  - creditservice
  http:
  - route:
    - destination:
        host: creditservice
        subset: version-v1
      weight: 100
---
