manifests/mesh/debitservice-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: debitservice
spec:
  hosts:
  - debitservice
  http:
  - route:
    - destination:
        host: debitservice
      weight: 100
---
