manifests/mesh/gateway-oidc.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: camel-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "mesh-demo/*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oidc-camel
spec:
  hosts:
  - "*"
  gateways:
  - camel-gateway
  http:
  - match:
    - uri:
        exact: /mesh-demo/oidc-camel
    rewrite:
      uri: "/v1/products"
    route:
    - destination:
        host: oidc-camel
        port:
          number: 8080
