manifests/mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: transaction-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bank-quarkus-demo/*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction
spec:
  hosts:
  - "*"
  gateways:
  - transaction-gateway
  http:
  - match:
    - uri:
        exact: /bank-quarkus-demo
    rewrite:
      uri: "/transaction"
    route:
    - destination:
        host: transaction
        port:
          number: 8080
